fix PlanController